<resources>
    <string name="app_name">TasvirAssignment2</string>
    <string name="channel_name">ChannelTeam</string>
    <string name="channel_description">Team Notification Channel</string>
    <string name="notification_title">Don\'t Forget</string>
    <string name="notification_details">Notification Details</string>
    <string name="task_name">Task Name</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="add_task">Add Task</string>
    <string name="view_task_list">View Task List</string>
    <string name="taskid">TaskID</string>
    <string name="due_date_amp_time"><![CDATA[Due Date & Time]]></string>
    <string name="action_on_wearable_clicked">Action on Wearable Clicked</string>
    <string name="wear_action">WEAR_ACTION</string>
    <string name="i_taskid">TaskID</string>
    <string name="do_not_forget">Do not Forget</string>
    <string name="wearable_action">Wearable Action</string>
    <string name="check_notifications">CHECK_NOTIFICATIONS</string>
    <string name="please_set_due_date_time"><![CDATA[Please Set Due Date & Time]]></string>
    <string name="task_saved">Task Saved</string>
    <string name="taskname">TaskName</string>
    <string name="show_upcoming_within_one_hour">SHOW_UPCOMING_WITHIN_ONE_HOUR</string>
    <string name="b_taskname_b"><![CDATA["<b>TaskName:</b> "]]></string>
    <string name="b_taskid_b"><![CDATA["<b>TaskID:</b> "]]></string>
    <string name="b_duetime_date_b"><![CDATA["<b>DueTime-Date:</b> "]]></string>
</resources>