<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewTaskId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/taskid"
        android:textSize="@dimen/edittext_size" />

    <TextView
        android:id="@+id/textViewTaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/task_name"
        android:textSize="@dimen/edittext_size" />

    <TextView
        android:id="@+id/textViewDueDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/due_date_amp_time"
        android:textSize="@dimen/edittext_size" />

    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_marginTop="1dp"
        android:background="@color/grey" />

</LinearLayout>