<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".activity.NotificationdetailsActivity"
    tools:ignore="MissingClass">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_boxedEdges="all">

        <TextView
            android:id="@+id/txtNotificationDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/notification_details"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txttaskidTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/taskid"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sp" />

        <TextView
            android:id="@+id/txttaskid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/textsize" />

        <TextView
            android:id="@+id/txttnameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/task_name"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sp" />

        <TextView
            android:id="@+id/txttaskname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_8sp" />


    </LinearLayout>
</androidx.wear.widget.BoxInsetLayout>